# cratui

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  config.rs  main.rs  ui.rs
src/cargo/: add.rs  install.rs  mod.rs  remove.rs  search.rs
src/pages/: manage.rs  mod.rs  search.rs
